--- a/HW2_ScottVirshup_XML_JSON API.ipynb
+++ b/HW2_ScottVirshup_XML_JSON API.ipynb
@@ -115,113 +115,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>body</th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>userId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>quia et suscipit\\nsuscipit recusandae consequu...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sunt aut facere repellat provident occaecati e...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>est rerum tempore vitae\\nsequi sint nihil repr...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>qui est esse</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>et iusto sed quo iure\\nvoluptatem occaecati om...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ea molestias quasi exercitationem repellat qui...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ullam et saepe reiciendis voluptatem adipisci\\...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>eum et est occaecati</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>repudiandae veniam quaerat sunt sed\\nalias aut...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>nesciunt quas odio</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                body  id  \\\n",
-       "0  quia et suscipit\\nsuscipit recusandae consequu...   1   \n",
-       "1  est rerum tempore vitae\\nsequi sint nihil repr...   2   \n",
-       "2  et iusto sed quo iure\\nvoluptatem occaecati om...   3   \n",
-       "3  ullam et saepe reiciendis voluptatem adipisci\\...   4   \n",
-       "4  repudiandae veniam quaerat sunt sed\\nalias aut...   5   \n",
-       "\n",
-       "                                               title  userId  \n",
-       "0  sunt aut facere repellat provident occaecati e...       1  \n",
-       "1                                       qui est esse       1  \n",
-       "2  ea molestias quasi exercitationem repellat qui...       1  \n",
-       "3                               eum et est occaecati       1  \n",
-       "4                                 nesciunt quas odio       1  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "\n",
-    "posts_100 = requests.get('https://jsonplaceholder.typicode.com/posts/')\n",
-    "\n",
-    "# Change the type of the object to be JSON\n",
-    "posts_100 = posts_100.json()\n",
-    "\n",
-    "# Convert the JSON object to a pandas dataframe\n",
-    "posts_100_df = pd.DataFrame(posts_100)\n",
-    "posts_100_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>index</th>\n",
        "      <th>body</th>\n",
        "      <th>id</th>\n",
@@ -853,7 +746,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,25 +754,30 @@
    "source": [
     "# reference: https://www.dataquest.io/blog/python-pandas-databases/\n",
     "\n",
+    "import requests\n",
+    "import pandas as pd\n",
     "import sqlite3\n",
     "\n",
+    "posts_100 = requests.get('https://jsonplaceholder.typicode.com/posts/')\n",
+    "\n",
+    "# Change the type of the object to be JSON\n",
+    "posts_100 = posts_100.json()\n",
+    "\n",
+    "# Convert the JSON object to a pandas dataframe\n",
+    "posts_100_df = pd.DataFrame(posts_100)\n",
+    "#posts_100_df.head()\n",
+    "\n",
+    "# Create a sqlite file called my_db in my folder for this assignment\n",
     "sqlite_file = '/Users/scottvirshup/Documents/UC Davis/Q3/Data Design/HW 2/my_db.sqlite'\n",
     "conn = sqlite3.connect(sqlite_file)\n",
     "c = conn.cursor()\n",
     "\n",
+    "# Create a table in this database called \"hundred\". If one already exists, replace it\n",
     "posts_100_df.to_sql(\"hundred\", conn, if_exists=\"replace\")\n",
     "\n",
+    "# Query the table to show that it works\n",
     "pd.read_sql_query(\"select * from hundred;\", conn)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
