inclusion of insert many in part 1

--- a/HW4_ScottVirshup_NoSQL MongoDB.ipynb
+++ b/HW4_ScottVirshup_NoSQL MongoDB.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -87,15 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5b00688cd18168717fa886fd'), 'id': 1616, 'name': 'Scoot Scooty', 'username': 'scootscooty', 'email': 'scoot@scoot.scoot', 'address': {'street': 'Scoot street', 'suite': 'Suite Scoot', 'city': 'Scootsville', 'zipcode': '16161-6161', 'geo': {'lat': '64.7511', 'lng': '147.3494'}}, 'phone': '911-555-5555 x55555', 'website': 'www.scoot.gov', 'company': {'name': \"Scoot's toilet paper\", 'catchPhrase': 'We clean butts', 'bs': 'toilet paper'}}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -123,56 +126,153 @@
     "    }\n",
     "}\n",
     "\n",
+    "user_1 = {\n",
+    "    \"id\":1111,\n",
+    "    \"username\":\"userone\",\n",
+    "    \"address\":{\n",
+    "        \"city\":\"onesies\"\n",
+    "    },\n",
+    "    \"company\":{\n",
+    "        \"name\":\"Uno\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "user_2 = {\n",
+    "    \"id\":2222,\n",
+    "    \"username\":\"usertwo\",\n",
+    "    \"address\":{\n",
+    "        \"city\":\"twoson\"\n",
+    "    },\n",
+    "    \"company\":{\n",
+    "        \"name\":\"Too\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "users = db.users\n",
     "\n",
+    "# Push the individual 'user' to the database\n",
     "result = users.insert_one(user)\n",
     "\n",
-    "result.inserted_id\n",
+    "# Push multiple users (user_1 and user_2) to the database\n",
+    "result = users.insert_many([user_1,user_2])\n",
     "\n",
+    "# Check the id of this additional user so you can find it later, if necessary\n",
+    "#result.inserted_id\n",
+    "\n",
+    "# Return the number of users within this database\n",
     "users.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The entire post for id 1616 is: \n",
-      "{'_id': ObjectId('5b00688cd18168717fa886fd'), 'id': 1616, 'name': 'Scoot Scooty', 'username': 'scootscooty', 'email': 'scoot@scoot.scoot', 'address': {'street': 'Scoot street', 'suite': 'Suite Scoot', 'city': 'Scootsville', 'zipcode': '16161-6161', 'geo': {'lat': '64.7511', 'lng': '147.3494'}}, 'phone': '911-555-5555 x55555', 'website': 'www.scoot.gov', 'company': {'name': \"Scoot's toilet paper\", 'catchPhrase': 'We clean butts', 'bs': 'toilet paper'}}\n",
-      "\n",
-      "Within post, the username is: scootscooty\n",
-      "\n",
+      "Within post id: 1616, the username is: scootscooty\n",
       "The city of the user is: Scootsville\n",
+      "The name of the company associated with this user is: Scoot's toilet paper\n",
       "\n",
-      "The name of the company associated with this user is: Scoot's toilet paper\n"
+      "Within post id: 1111, the username is: userone\n",
+      "The city of the user is: onesies\n",
+      "The name of the company associated with this user is: Uno\n",
+      "\n",
+      "Within post id: 2222, the username is: usertwo\n",
+      "The city of the user is: twoson\n",
+      "The name of the company associated with this user is: Too\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Let's find my user ID, and search for some specific data from it\n",
-    "id_filter = 1616\n",
-    "json_users = users.find_one({\"id\":id_filter})\n",
+    "# Search for the three users that were added\n",
     "\n",
-    "# print the whole thing\n",
-    "print('The entire post for id '+str(id_filter)+' is: \\n'+str(json_users)+str('\\n'))\n",
+    "# Define the ids we want to search for\n",
+    "user_id = 1616\n",
+    "user_one_id = 1111\n",
+    "user_two_id = 2222\n",
     "\n",
-    "# username\n",
-    "username = json_users['username']\n",
-    "print('Within post, the username is: '+str(username)+str('\\n'))\n",
+    "# Create json objects for each of the three users\n",
+    "user = users.find_one({\"id\":user_id})\n",
+    "user_one_json = users.find_one({\"id\":user_one_id})\n",
+    "user_two_json = users.find_one({\"id\":user_two_id})\n",
     "\n",
-    "# city\n",
-    "city = json_users['address']['city']\n",
-    "print(\"The city of the user is: \" +str(city)+str('\\n'))\n",
+    "# username objects\n",
+    "username = user['username']\n",
+    "username_one = user_one_json['username']\n",
+    "username_two = user_two_json['username']\n",
     "\n",
-    "# company name\n",
-    "company_name = json_users['company']['name']\n",
-    "print(\"The name of the company associated with this user is: \"+str(company_name))"
+    "# city objects\n",
+    "city = user['address']['city']\n",
+    "city_one = user_one_json['address']['city']\n",
+    "city_two = user_two_json['address']['city']\n",
+    "\n",
+    "# company name objects\n",
+    "company_name = user['company']['name']\n",
+    "company_name_one = user_one_json['company']['name']\n",
+    "company_name_two = user_two_json['company']['name']\n",
+    "\n",
+    "# Results\n",
+    "print('Within post id: '+str(user_id)+', the username is: '+str(username)+str('\\n')+\n",
+    "      'The city of the user is: ' +str(city)+str('\\n')+\n",
+    "      'The name of the company associated with this user is: '+str(company_name)+str('\\n'))\n",
+    "\n",
+    "print('Within post id: '+str(user_one_id)+', the username is: '+str(username_one)+str('\\n')+\n",
+    "      'The city of the user is: ' +str(city_one)+str('\\n')+\n",
+    "      'The name of the company associated with this user is: '+str(company_name_one)+str('\\n'))\n",
+    "\n",
+    "print('Within post id: '+str(user_two_id)+', the username is: '+str(username_two)+str('\\n')+\n",
+    "      'The city of the user is: ' +str(city_two)+str('\\n')+\n",
+    "      'The name of the company associated with this user is: '+str(company_name_two)+str('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2\n",
+    "Assignment:\n",
+    "1. Create a new document collection: posts\n",
+    "1. In the new document posts collection, insert all post documents (https://jsonplaceholder.typicode.com/posts)\n",
+    "1. Update several documents using “update_one” and “update_many” operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "post = {\n",
+    "    \"userId\":16,\n",
+    "    \"id\":100,\n",
+    "    \"title\":\"Scott's addition\",\n",
+    "    \"body\":\"Nobody else should use this id or userId because it's special for me\"\n",
+    "}\n",
+    "\n",
+    "posts = db.posts\n",
+    "\n",
+    "result = posts.insert_one(post)\n",
+    "result.inserted_id\n",
+    "\n",
+    "# Return the number of posts within this database\n",
+    "posts.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "json_users"
    ]
   },
   {
